--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -595,3 +595,19 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+/* Navlink Styles */
+.active {
+  color: orange;
+  text-decoration: none;
+}
+
+.active.hover,
+.navlink:hover {
+  text-decoration: underline;
+}
+
+.navlink {
+  color: white;
+  text-decoration: none;
+}
